# LabWork3_2sem

./: .gitignore  CMakeLists.txt  ExpFunction.h  IFunction.h  Interval.h  InverseSquareFunction.h  LinearFunction.h  Monotonicity.h  Piece.h  PiecewiseFunction.h  PolynomialFunction.h  README.md  SinFunction.h  TempInverseSquareTest.cpp  UniquePtr.h  main.cpp  test_main.cpp  tests.cpp  tests.h
LabWork2_2sem/: .gitattributes  .gitignore  ArraySequence.h  DynamicArray.h  ListSequence.h  Makefile  README.md  Sequence.h  map.h  tests.cpp  unzip.h  zip.h
LabWork2_2sem/ui/: append_ui.cpp  append_ui.h  concat_ui.cpp  concat_ui.h  create_sequence_ui.cpp  create_sequence_ui.h  insert_at_ui.cpp  insert_at_ui.h  map_ui.cpp  map_ui.h  prepend_ui.cpp  prepend_ui.h  print_sequences_ui.cpp  print_sequences_ui.h  reduce_ui.cpp  reduce_ui.h  run_tests_ui.cpp  run_tests_ui.h  sequence_ui_utils.cpp  sequence_ui_utils.h  slice_ui.cpp  slice_ui.h  subsequence_ui.cpp  subsequence_ui.h  ui.cpp  ui_state.h  unzip_ui.cpp  unzip_ui.h  where_ui.cpp  where_ui.h  zip_ui.cpp  zip_ui.h
ui/: approximation.cpp  approximation.h  continuity_ui.cpp  continuity_ui.h  create_function_ui.cpp  create_function_ui.h  define_piece_ui.cpp  define_piece_ui.h  evaluate_ui.cpp  evaluate_ui.h  monotonicity_ui.cpp  monotonicity_ui.h  piecewise_ui_utils.cpp  piecewise_ui_utils.h  plot_ui.cpp  plot_ui.h  print_functions_ui.cpp  print_functions_ui.h  run_tests_ui.cpp  ui.cpp  ui.h  ui_state.h
